<resources>
    <string name="app_name">Discover Games</string>
    <string name="game_image_description">Game Image</string>
    <string name="rating">Rating</string>
    <string name="share_game">Share Game</string>
    <string name="share_url">https://rawg.io/games/</string>
    <string name="show_less">Show Less</string>
    <string name="show_more">Show More</string>
    <string name="release_date">Release Date</string>
    <string name="ratings_count">Ratings Count</string>
    <string name="esrb_rating">ESRB Rating</string>
    <string name="profile_name">Zuhal \'Alimul Hadi</string>
    <string name="profile_email">zuhalalimulhadi19@gmail.com</string>
    <string name="profile_image_content_desc">Profile Image</string>
    <string name="about_page">About</string>
    <string name="about_page_content_desc">about_page</string>
    <string name="my_favorite_games_page">Favorite</string>
    <string name="my_favorite_games_page_content_desc">favorite_page</string>
    <string name="home_page">Home</string>
    <string name="home_page_content_desc">home_page</string>
    <string name="search_game">Search your game here..</string>
    <string name="add_to_favorite">Add to Favorite</string>
    <string name="remove_from_favorite">Remove from Favorite</string>
    <string name="profile_picture_link">https://avatars.githubusercontent.com/u/74417769?v=4</string>
    <string name="release_date_section">Release Date Section</string>
    <string name="rating_section">Rating Section</string>
    <string name="ratings_count_section">Ratings Count Section</string>
    <string name="esrb_rating_section">ESRB Rating Section</string>
    <string name="favorite_button">Favorite Button</string>
    <string name="share_game_button">Share Game Button</string>
    <string name="expandable_game_desc">Expandable text of the game description</string>
    <string name="genre_row_content_desc">Genre row in game details</string>
    <string name="about_page_name_content_desc">Name of the app creator, Zuhal \'Alimul Hadi</string>
    <string name="about_page_email_content_desc">Email of the creator app, zuhalalimulhadi19@gmail.com</string>
    <string name="search_bar">Search bar</string>
    <string name="game_item_content_desc">One of the game item in the list on the home page</string>
    <string name="game_list">GameList</string>
    <string name="back">Back</string>
    <string name="detail_tag">DetailGame</string>
    <string name="description_detail_tag">DescriptionGameDetail</string>
    <string name="game_not_found">Game not found</string>
    <string name="not_found_tag">NotFound</string>
    <string name="not_existing_game">abcdefghi</string>
    <string name="existing_game">grand</string>
</resources>